--- a/app/views/sindans/index.html.erb
+++ b/app/views/sindans/index.html.erb
@@ -34,8 +34,8 @@
                     <a href="#12" onclick="show(12)" class="qabtn"><div class="btnBox btnBox_n">NO</div></a>
                 </div>
             </li>
-                <li id="11" class="question">
-                <a name="#11"></a>
+                <li id="12" class="question">
+                <a name="#12"></a>
                 <div class="qbox"><span  class="q">Q.</span>盛り上がってますか？</div>
                 <div class="qabox">
                     <a href="#101" onclick="show(101)" class="qabtn"><div class="btnBox btnBox_y">YES</div></a>
@@ -43,33 +43,26 @@
                 </div>
             </li>
                 
-                <li id="103" class="question">
-                <a name="#103"></a>
+                <li id="102" class="question">
+                <a name="#102"></a>
                 <div class="qbox"><span  class="q">Q.</span>高得点取りたいですか？</div>
                 <div class="qabox">
                     <a href="#61" onclick="show(61)" class="qabtn"><div class="btnBox btnBox_y">YES</div></a>
                     <a href="#71" onclick="show(71)" class="qabtn"><div class="btnBox btnBox_n">NO</div></a>
                 </div>
+         
             </li>
-                <li id="104" class="question">
-                <a name="#104"></a>
-                <div class="qbox"><span  class="q">Q.</span>高得点取りたいですか？</div>
-                <div class="qabox">
-                    <a href="#81" onclick="show(81)" class="qabtn"><div class="btnBox btnBox_y">YES</div></a>
-                    <a href="#91" onclick="show(91)" class="qabtn"><div class="btnBox btnBox_n">NO</div></a>
-                </div>
-            </li>
-                <li id="105" class="question">
-                <a name="#105"></a>
-                <div class="qbox"><span  class="q">Q.</span>高得点取りたいですか？</div>
+                <li id="71" class="question">
+                <a name="#71"></a>
+                <div class="qbox"><span  class="q">Q.</span>最新の曲が好きですか？</div>
                 <div class="qabox">
                     <a href="#111" onclick="show(111)" class="qabtn"><div class="btnBox btnBox_y">YES</div></a>
                     <a href="#121" onclick="show(121)" class="qabtn"><div class="btnBox btnBox_n">NO</div></a>
                 </div>
             </li>
             
-            <li id="71" class="question">
-                <a name="#71"></a>
+            <li id="111" class="question">
+                <a name="#111"></a>
                 <div class="qbox"><span  class="q">Q.</span>泣きたいですか？</div>
                 <div class="qabox">
                     <a href="#1010" onclick="show(1010)" class="qabtn"><div class="btnBox btnBox_y">YES</div></a>
@@ -80,144 +73,112 @@
             </ul>
             <div class="answerList">
 
+                <div id="3" style="display:none;" class="answer point_box">
+                    <div class="box">
+                        <div class="title">
+                        <p>あなたに勧める歌手は<span class="fs-18"><span class="bg-y">『NiziU』</span></span>です！</p>
+                        </div>
+                    <div class="txt">
+                        <div class="img">
+                        <%= image_tag 'Nizyu.jpg' %></div>
+                        <p>おすすめ曲「Make you happy」</p>
+<p>『NiziU（読み方：ニジュー）』は日本のレコード会社・ソニーミュージックと韓国の大手芸能プロダクション・JYPエンターテインメント共同のオーディション番組「Nizi Project（虹プロ）」から生まれた9人組のガールズアイドルグループです。</p>
+                       
+                    </div>
+                    </div>
+                </div>
                 <div id="101" style="display:none;" class="answer point_box">
                     <div class="box">
                         <div class="title">
-                        <p>あなたに勧める〇〇は<span class="fs-18"><span class="bg-y">『〇〇〇〇』</span></span>です！</p>
+                        <p>あなたに勧める歌手は<span class="fs-18"><span class="bg-y">『orange range』</span></span>です！</p>
                         </div>
                     <div class="txt">
                         <div class="img">
-                        <%= image_tag '' %></div>
-                        <p>説明会文「タイトル」</p>
-<p>詳細を記載</p>
-                        <p><a href="#" class="square_btn">もっと詳しくみる</a></p>
+                        <%= image_tag 'orange.jpg' %></div>
+                        <p>おすすめ曲「イケナイ太陽」</p>
+<p>ORANGE RANGE（オレンジ・レンジ）は、沖縄県を拠点に活動する日本の男性5人組ロックバンド。略称はRANGE（レンジ）。所属プロダクションはスパイスミュージック（業務提携先はスターダストプロモーション）。レコード会社は自主レーベル「SUPER((ECHO))LABEL」（業務提携先はJVCケンウッド・ビクターエンタテインメントの社内レーベルSPEEDSTAR RECORDS）。公式ファンクラブは「RANGE AID+」</p>
+
+                  
                     </div>
                     </div>
                 </div>
-                <div id="102" style="display:none;" class="answer point_box">
+                <div id="11" style="display:none;" class="answer point_box">
                     <div class="box">
                         <div class="title">
-                        <p>あなたに勧める〇〇は<span class="fs-18"><span class="bg-y">『〇〇』</span></span>です！</p>
+                        <p>あなたに勧める歌手は<span class="fs-18"><span class="bg-y">『嵐』</span></span>です！</p>
                         </div>
                     <div class="txt">
                         <div class="img">
-                        <%= image_tag '' %></div>
-                        <p>説明文「タイトル」</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-                        <p><a href="#" class="square_btn">もっと詳しくみる</a></p>
+                        <%= image_tag 'arasi.jpg' %></div>
+                        <p>おすすめ曲「Happiness」</p>
+<p>嵐（あらし、英: ARASHI[1]）は、日本の男性アイドルグループ[6]。所属事務所はジャニーズ事務所[1]。所属レコード会社はジェイ・ストーム[7]。2020年12月31日をもってグループとしての活動を休止した</p>
+
                     </div>
                     </div>
                 </div>
-                <div id="103" style="display:none;" class="answer point_box">
+                <div id="61" style="display:none;" class="answer point_box">
                     <div class="box">
                         <div class="title">
-                        <p>あなたに勧める〇〇は<span class="fs-18"><span class="bg-y">『〇〇』</span></span>です！</p>
+                        <p>あなたに勧める歌手は<span class="fs-18"><span class="bg-y">「清水翔太」</span></span>です！</p>
                         </div>
                     <div class="txt">
                         <div class="img">
-                        <%= image_tag '' %></div>
-                        <p>説明文「タイトル」</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-                        <p><a href="#" class="square_btn">もっと詳しくみる</a></p>
+                        <%= image_tag 'simizu.jpg' %></div>
+                        <p>おすすめ曲「花束の代わりにメロディーを」</p>
+<p>清水 翔太（しみず しょうた、1989年2月27日[1] - ）は、日本のポップ/R&Bシンガーソングライター。作詞作曲のほかアレンジも自身で手掛ける。</p>
+
                     </div>
                     </div>
                 </div>
-                <div id="104" style="display:none;" class="answer point_box">
+                <div id="121" style="display:none;" class="answer point_box">
                     <div class="box">
                         <div class="title">
-                        <p>あなたに勧める〇〇は<span class="fs-18"><span class="bg-y">説明文「タイトル」</span></span>です！</p>
+                        <p>あなたに勧める歌手は<span class="fs-18"><span class="bg-y">「GReeeeN」</span></span>です！</p>
                         </div>
                     <div class="txt">
                         <div class="img">
-                        <%= image_tag '' %></div>
-                        <p>説明文「タイトル」</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
- <p><a href="#" class="square_btn">もっと詳しくみる</a></p>
+                        <%= image_tag 'green.jpg' %></div>
+                        <p>おすすめ曲「キセキ」</p>
+<p>GReeeeN（グリーン）は、日本の男性4人組ボーカルグループ。福島県郡山市で結成された。所属レーベルはPolydor Records、所属事務所は株式会社ハイスピードボーイ[4]。歯科医師とアーティストを両立しており、歯科医師の本業に支障を出さないようにするため、顔を一切公表していない。</p>
+
                     </div>
                     </div>
                 </div>
-                <div id="104" style="display:none;" class="answer point_box">
-                    <div class="box">
-                        <div class="title">
-                        <p>あなたに勧める〇〇は<span class="fs-18"><span class="bg-y">説明文「タイトル」</span></span>です！</p>
-                        </div>
-                    <div class="txt">
-                        <div class="img">
-                        <%= image_tag '' %></div>
-                        <p>説明文「タイトル」</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p><a href="#" class="square_btn">もっと詳しくみる</a></p>
-                    </div>
-                    </div>
-                </div>
-                <div id="104" style="display:none;" class="answer point_box">
+                <div id="1010" style="display:none;" class="answer point_box">
                     <div class="box">
                      <div class="title">
-                        <p>あなたに勧める〇〇は<span class="fs-18"><span class="bg-y">説明文「タイトル」</span></span>です！</p>
+                        <p>あなたに勧める歌手は<span class="fs-18"><span class="bg-y">「あいみょん」</span></span>です！</p>
                      </div>
                     <div class="txt">
                         <div class="img">
-                        <%= image_tag '' %></div>
-                        <p>説明文「タイトル」</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p><a href="#" class="square_btn">もっと詳しくみる</a></p>
+                        <%= image_tag 'aimyon.jpg' %></div>
+                        <p>おすすめ曲「君はロックを聴かない」</p>
+<p>あいみょん（1995年〈平成7年〉3月6日[4] - ）は、日本のシンガーソングライター[5]。本名は非公開。兵庫県西宮市出身[6]。血液型はO型[7]。所属芸能事務所はエンズエンターテイメント。所属レーベルはワーナーミュージック・ジャパン傘下のunBORDE。</p>
+<p>16年11月にシングル「生きていたんだよな」でメジャーデビュー。 17年5月に2ndシングル「愛を伝えたいだとか」、8月に3rdシングル「君はロックを聴かない」 を発表し、9月にリリースした1stフルアルバム「青春のエキサイトメント」は現在もロングセールスを記録中。</p>
+
+
                     </div>
                     </div>
                 </div>
-                <div id="104" style="display:none;" class="answer point_box">
+                <div id="1011" style="display:none;" class="answer point_box">
                     <div class="box">
                         <div class="title">
-                            <p>あなたに勧める〇〇は<span class="fs-18"><span class="bg-y">説明文「タイトル」</span></span>です！</p>
+                            <p>あなたに勧める歌手は<span class="fs-18"><span class="bg-y">「Vaundy」</span></span>です！</p>
                         </div>
                     <div class="txt">
                         <div class="img">
-                        <%= image_tag '' %></div>
-                        <p>説明文「タイトル」</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p><a href="#" class="square_btn">もっと詳しくみる</a></p>
-                    </div>
-                    </div>
-                </div>
-                <div id="104" style="display:none;" class="answer point_box">
-                    <div class="box">
-                        <div class="title">
-                        <p>あなたに勧める〇〇は<span class="fs-18"><span class="bg-y">説明文「タイトル」</span></span>です！</p>
-                        </div>
-                    <div class="txt">
-                        <div class="img">
-                        <%= image_tag '' %></div>
-                        <p>説明文「タイトル」</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p><a href="#" class="square_btn">もっと詳しくみる</a></p>
-                    </div>
-                    </div>
-                </div>
-                <div id="104" style="display:none;" class="answer point_box">
-                    <div class="box">
-                        <div class="title">
-                        <p>あなたに勧める〇〇は<span class="fs-18"><span class="bg-y">説明文「タイトル」</span></span>です！</p>
-                        </div>
-                    <div class="txt">
-                        <div class="img">
-                        <%= image_tag '' %></div>
-                        <p>説明文「タイトル」</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
-<p>詳細を記載</p>
+                        <%= image_tag 'vaundy.jpg' %></div>
+                        <p>おすすめ曲「怪獣の花唄」</p>
+<p>作詞・作曲・編曲のみならず、クリエイターと協働してアートワーク制作、映像プロデュースも手掛ける。現役で美術系大学に通いながら活動中。
+
+中学生の頃からCubaseを使用した作曲活動を始める。高校時代にはニコニコ動画にてVOCALOID曲の「歌い手」としての活動も行った[1]。また、麻布十番にある音楽塾ヴォイスに通い、本格的に音楽の勉強を始める[2]。
+
+2020年にSpotifyが今年躍進を期待するネクストブレイクアーティスト10組「Early Noise 2020」に選出[3]、またスペースシャワーネットワークがイチオシの新人を選ぶ「SPACE SHOWER RETSUDEN NEW FORCE」2020年度ラインナップに選出され、注目を集める[4]。
+
+「Vaundy」という自身の名前にも、1stアルバムのタイトル『strobo』にも、敢えて和製英語を用いるのは日本人アーティストとしての矜恃で、海外での活動も視野に入れている。
+
+</p>
+
                     </div>
                     </div>
                 </div>
