--- a/app/assets/stylesheets/kensaks.scss
+++ b/app/assets/stylesheets/kensaks.scss
@@ -1,3 +1,219 @@
 // Place all the styles related to the kensaks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.link:hover {
+    color: black !important;
+  }
+  body {
+    font-family: 'Comic Neue', cursive;
+  }
+  .body {
+    background-color: #ffcccc;
+  }
+ 
+
+  .start {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+   
+    padding-top: 0; 
+  margin-top: 0; 
+  }
+  @import "https://use.fontawesome.com/releases/v5.13.0/css/all.css";
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+/* 背景用*/
+body {
+  padding: 30px;
+}
+
+.btn,
+a.btn,
+button.btn {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+}
+
+a.btn-3d-flip {
+    display: block;
+    width: 400px; /* 幅を400pxに変更 */
+    height: 50px;
+    margin: 0 auto;
+    padding: 0;
+    -webkit-perspective: 600px;
+    margin-top: -30px; /* マージントップを-30pxに設定 */
+    perspective: 600px;
+  }
+  
+a.btn-3d-flip:hover .btn-3d-flip-box {
+  -webkit-transform: translateY(-50%) rotateX(90deg);
+  transform: translateX(-50%) rotateY(-90deg);
+}
+
+a.btn-3d-flip.btn-3d-flip2:hover .btn-3d-flip-box2 {
+  -webkit-transform: translateX(-50%) rotateY(-90deg);
+  transform: translateX(-50%) rotateY(-90deg);
+}
+
+.btn-3d-flip-box {
+  position: relative;
+
+  display: block;
+  
+  width: 100%;
+  height: 100%;
+  margin: auto;
+
+  -webkit-transition: all 0.4s;
+
+  transition: all 0.4s;
+  -webkit-transform: rotateX(0);
+  transform: rotateY(0);
+  text-decoration: none;
+  text-transform: uppercase;
+
+  color: #fff;
+
+  -webkit-transform-style: preserve-3d;
+
+  transform-style: preserve-3d;
+}
+
+.btn-3d-flip-box2 {
+  position: relative;
+
+  display: block;
+
+  width: 100%;
+  height: 100%;
+  margin: auto;
+
+  -webkit-transition: all 0.4s;
+
+  transition: all 0.4s;
+  -webkit-transform: rotateY(0);
+  transform: rotateY(0);
+  text-decoration: none;
+  text-transform: uppercase;
+
+  color: #fff;
+
+  -webkit-transform-style: preserve-3d;
+
+  transform-style: preserve-3d;
+}
+
+.btn-3d-flip-box-face {
+  display: block;
+  position: relative;
+
+  width: 100%;
+  padding: 1.5rem 0;
+
+  -webkit-transition: all 0.4s;
+
+  transition: all 0.4s;
+
+  color: #fff;
+
+  -webkit-backface-visibility: hidden;
+
+  backface-visibility: hidden;
+}
+
+.btn-3d-flip-box-face--front {
+  background: #eb6100;
+}
+
+.btn-3d-flip-box-face--back {
+  position: absolute;
+  top: 100%;
+  left: 0;
+
+  -webkit-transform: translateY(-1px) rotateX(-90deg);
+
+  transform: translateX(-1px) rotateY(90deg);
+  -webkit-transform-origin: 50% 0;
+  transform-origin: 50% 0;
+
+  background: #dc5b00;
+}
+
+.btn-3d-flip-box-face--front2 {
+  color: #000;
+  border: 2px solid #000;
+  background: #fff;
+}
+
+.btn-3d-flip-box-face--back2 {
+  position: absolute;
+  top: 0;
+  left: 100%;
+
+  -webkit-transform: translateX(-1px) rotateY(90deg);
+
+  transform: translateX(-1px) rotateY(90deg);
+  transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+
+  color: #fff;
+  border: 2px solid #000;
+  background: #000;
+}
+
+.fa-position-right {
+  position: absolute;
+  top: calc(60% - 0.5em);
+  right: 1rem;
+}
+h4 {
+    font-size: 40px; 
+    margin-bottom: 40px; 
+    text-align: center; 
+}
+h6 {
+    
+    font-size: 18px; 
+    text-align: center; 
+    top: 0%;
+  left: 100%;
+}
+.hazime{
+    margin-bottom: 40px; 
+}
+.drive{
+    font-size: 40px; 
+}
+
