--- a/app/assets/stylesheets/krks.scss
+++ b/app/assets/stylesheets/krks.scss
@@ -19,6 +19,73 @@
     "areaG areaF areaD"
     "areaG areaF areaE"; /*「セル3×3のレイアウト」に対してエリア名を指定*/
 }
+
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 62.5%;/*rem算出をしやすくするために*/
+}
+
+.btn,
+a.btn,
+button.btn {
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1.5;
+  position: relative;
+  display: inline-block;
+  padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  letter-spacing: 0.1em;
+  color: #212529;
+  border-radius: 0.5rem;
+}
+#special-header ul {
+    list-style-type: none; /* リストマーカーを削除 */
+    padding: 0; /* パディングを削除 */
+    display: flex; /* 追加: リストアイテムを横並びにする */
+}
+
+#special-header ul li {
+    margin-right: 20px; /* 右側のマージンを追加 */
+}
+
+/* ヘッダー内のリンクのスタイル */
+#special-header ul li a {
+    color: #000000; /* テキストの色 */
+    text-decoration: none; /* 下線を削除 */
+    font-weight: bold; /* フォントを太字に設定 */
+    padding: 5px 10px; /* パディングを追加 */
+    text-align: center;
+    font-family: Irish Grover;
+    font-size: 40px; /* フォントサイズを大きくする */
+    line-height: 44px; /* 110% */
+}
+
+/* ヘッダー内のリンクのホバースタイル */
+#special-header ul li a:hover {
+    color: #ff0000; /* ホバー時のテキストの色 */
+    text-decoration: underline; /* ホバー時に下線を追加 */
+}
+
+
 .itemA {
     grid-area: areaA;
     background-image: url('microphone-4838064_1280.jpg'); /* ここに画像のパスを指定します */
@@ -50,7 +117,7 @@
         font-size: 30px;
         font-style: normal;
         font-weight: 400;
-        line-height: 44px; /* 146.667% */
+        line-height: 35px; /* 146.667% */
     }
     .itemB {
         grid-area: areaB;
@@ -71,19 +138,19 @@
         
         display: flex;
         width: 944px;
-        height:  600px;
+        height:  550px;
         flex-direction: column;
         justify-content: center;
         flex-shrink: 0;
         color: #E4EFFA;
         text-align: center;
         font-family: Italiana;
-        font-size: 40px;
+        font-size: 35px;
         font-style: normal;
-        font-weight: 400;
+        font-weight: 360;
         line-height: 60px; /* 150% */
         letter-spacing: 2px;
-        padding-left: 200px;
+        padding-left: 150px;
     }
     .text-left-top {
         display: flex;
@@ -95,10 +162,10 @@
         color: #FFF;
         text-align: center;
         font-family: Italiana;
-        font-size: 40px;
+        font-size: 45px;
         font-style: normal;
-        font-weight: 400;
-        line-height: 44px; /* 110% */
+        font-weight: 350;
+        line-height: 36px; /* 110% */
         position: absolute; /* areaC内の特定の位置に配置するためのもの */
         top: 10px; /* 上端からの距離を指定。値はお好みに合わせて調整 */
         left: 10px; 
@@ -227,6 +294,25 @@
     .itemF a:hover img {
         transform: scale(1.1); /* 1.1倍に拡大 */
     }
+    .itemF .kensak-text {
+        position: absolute;
+        top: 3%;
+        left: 2%;
+        display: flex;
+        width: 244px;
+        height: 66px;
+        flex-direction: column;
+        justify-content: center;
+        flex-shrink: 0;
+        color: #000;
+        text-align: center;
+        font-family: Jua;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 60px; /* 150% */
+        letter-spacing: 2px;
+    }
     .A-box {
         position: absolute;
         z-index: 1;
@@ -259,7 +345,81 @@
     }
     .itemG {
       grid-area: areaG;
+      position: relative; 
+      width: 466px;
+      height: 632px;
+      overflow: hidden; /* 画像がコンテナの外にはみ出さないようにする */
+  }
+  
+  .itemG a {
+      display: block;
+      width: 100%;
+      height: 100%;
+  }
+  
+  .itemG img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+  
+      /* ホバー時のアニメーションのための設定 */
+      transition: transform 0.3s ease-in-out; 
+  }
+  
+  /* ホバー時に画像のサイズを拡大 */
+  .itemG a:hover img {
+      transform: scale(1.1); /* 1.1倍に拡大 */
+  }
+  .G-box {
+      position: absolute;
+      z-index: 1;
+      top: 25%;
+      left: 10%;
+      width: 239px;
+    height: 344px;
+    flex-shrink: 0;
+    border-radius: 344px;
+    background: #F9EFEF;
     }
+  .G-box p {
+      position: absolute;
+      top: 6%;
+      left: 12%;
+      display: flex;
+        width: 192px;
+        height: 331px;
+        flex-direction: column;
+        justify-content: center;
+        flex-shrink: 0;
+        color: #000;
+        text-align: center;
+        font-family: Jua;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 60px; /* 150% */
+        letter-spacing: 2px;
+}
+.itemG .sindan-text {
+    position: absolute;
+    top: 1%;
+    left: 2%;
+    display: flex;
+    width: 219px;
+    height: 94px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #5B033D;
+    text-align: center;
+    font-family: Jost;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 60px; /* 150% */
+    letter-spacing: 2px;
+}
     .itemH {
         grid-area: areaH;
         width: 466px;
@@ -284,16 +444,14 @@
         color: #FFF;
         text-align: center;
         font-family: Italiana;
-        font-size: 36px;
+        font-size: 30px;
         font-style: normal;
-        font-weight: 400;
-        line-height: 44px; /* 122.222% */
+        font-weight: 350;
+        line-height: 35px; /* 122.222% */
     }
     a.btn-flat {
-        position: relative;
-        margin-top: auto;           /* 上方向のスペースを最大化 */
-        margin-bottom: 150px; 
         overflow: hidden;
+      
         padding: 1.5rem 6rem;
       
         color: #fff;
@@ -303,6 +461,33 @@
       
       a.btn-flat span {
         position: relative;
+      }
+      
+      a.btn-flat:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+      
+        width: 100px;
+        height: 100px;
+      
+        content: '';
+        -webkit-transition: all .5s ease-in-out;
+        transition: all .5s ease-in-out;
+        -webkit-transform: translateX(-80%) translateY(-25px);
+        transform: translateX(-80%) translateY(-25px);
+      
+        border-radius: 50%;
+        background: #eb6100;
+      }
+      
+      a.btn-flat:hover:before {
+        width: 400px;
+        height: 400px;
+      
+        -webkit-transform: translateX(-1%) translateY(-175px);
+      
+        transform: translateX(-1%) translateY(-175px);
       }
       
       
@@ -321,29 +506,7 @@
     color: #fff;
     text-decoration: none;
   }
-  a.btn-flat:before {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100px;
-    height: 100px;
-    content: '';
-    z-index: 1;
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    z-index: -1;  /* これを追加して、テキストの下に円を表示 */
-    border-radius: 50%;
-    background: #eb6100;
-  }
-  
-  a.btn-flat:hover:before {
-    width: 400px;
-    height: 400px;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-  }
+ 
   
   a:hover {
     color: #f00;
