--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,68 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.user-profile {
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: #f8f8f8;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.user-profile img {
+    max-width: 100%;
+    border-radius: 50%;
+}
+
+.user-profile h1 {
+    font-size: 24px;
+    text-align: center;
+    color: #333;
+}
+
+.user-profile p {
+    font-size: 18px;
+    color: #555;
+}
+
+.user-posts, .user-liked-posts {
+    margin-top: 20px;
+}
+
+.post, .liked-post {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.post h2, .liked-post h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.post p, .liked-post p {
+    margin: 0;
+    font-size: 16px;
+}
+.edit-btn {
+    background-color: #4CAF50; /* 緑色 */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 12px;
+    transition: background-color 0.3s;
+  }
+  
+  .edit-btn:hover {
+    background-color: #45a049;
+  }
+  
