--- a/app/views/kensaks/new.html.erb
+++ b/app/views/kensaks/new.html.erb
@@ -5,10 +5,10 @@
                 <p>Question1. どちらかと言うと…</p>
             </div>
             <div class="col-6">
-                <p><%= f.check_box :question, {multiple: true}, "1", nil %>じっくり考える方だ</p>
+                <p><%= f.check_box :question, {multiple: true}, "1", nil %>法定速度は守る方だ</p>
             </div>
             <div class="col-6">
-                <p><%= f.check_box :question, {multiple: true}, "2", nil %>考えるより行動する方だ</p>
+                <p><%= f.check_box :question, {multiple: true}, "2", nil %>警察いなかったら飛ばしちゃえ！</p>
             </div>
 
             <div class="col-12">
@@ -22,13 +22,13 @@
             </div>
 
             <div class="col-12">
-                <p>Question3. 人と接するときは…</p>
+                <p>Question3. 運転する時間は…</p>
             </div>
             <div class="col-6">
-                <p><%= f.check_box :question, {multiple: true}, "1", nil %>相手の話をよく聞く方だ</p>
+                <p><%= f.check_box :question, {multiple: true}, "1", nil %>日中だ</p>
             </div>
             <div class="col-6">
-                <p><%= f.check_box :question, {multiple: true}, "2", nil %>自分の話をよくする方だ</p>
+                <p><%= f.check_box :question, {multiple: true}, "2", nil %>夜だ</p>
             </div>
 
             <div class="col-12">
