--- a/app/views/krks/new.html.erb
+++ b/app/views/krks/new.html.erb
@@ -1,33 +1,44 @@
-<h1>メロディマップ</h1>
-<h3>新規投稿ページ</h3>
-<%= form_for @krk do |f| %>
 
+<%= form_for @krk do |f| %>
+  
   <div class="field">
     <%= f.label :歌の名前 %>
     <%= f.text_field :name, :size => 30 %>
   </div>
 
-  <div class="field">
-    <%= f.label :ジャンル  %>
-    <%= f.select :genre, 
-    [["洋楽", "洋楽"], 
-    ["J-pop", "J-pop"], 
-    ["ラップ", "ラップ"],
-    ["k-pop", "k-pop"],
-    ["ロック", "ロック"]], include_blank: "選択して下さい" %>
-  </div>
 
-  <div class="field">
-  <%= f.label :image %>
-  <%= f.file_field :image %>
-  </div>
 
-  <div class="field">
-    <%= f.label :自由（歌手の名前や歌いやすさや、どこで聞いたか等  %>
-    <%= f.text_area :about, :size => "30x2" %>
-  </div>
 
-  <%= f.submit "投稿する" %>
+<div class="msr_pulldown_04">
+    <p>ジャンル</p>
+    <select name="msr_04_pulldown01">
+      <option value="">選択してください</option>
+      <option value="test1">洋楽</option>
+      <option value="test2">J-pop</option>
+      <option value="test3">ラップ</option>
+      <option value="test4">k-pop</option>
+      <option value="test5">ロック</option>
+    </select>
+  </div>
+  <div class="msr_file_04">
+    <p>画像</p>
+    <div class="msr_filebox_04">
+      <label for="file_photo04">画像を選択してください</label>
+      <input type="file" id="file_photo04">
+    </div>
+  </div>
+  <div class="msr_textarea_04">
+    <label for="text">文章</label>
+    <textarea></textarea>
+  </div>
+  <p class="msr_sendbtn_04">
+    <input type="submit" value="Send">
+  </p>
+  <p class="msr_sendbtn_04 msr_sendbtn_04_disabled">
+    <input type="submit" value="Send" disabled="disabled">
+  </p>
+</form>
+
 <% end %>
 <div class="krks-container">
     <% @krks.each do |t| %>
@@ -39,9 +50,10 @@
         <%= t.about %>
 
         <% if user_signed_in? && current_user.id == t.user_id %>
-        <%= link_to "編集する", edit_krk_path(t.id) %>
-        <%= link_to "削除する", krk_path(t.id), method: :delete %>
-        <% end %> 
+        <%= link_to "編集する", edit_krk_path(t.id), class: "btn-small btn-edit" %>
+        <%= link_to "削除する", krk_path(t.id), method: :delete, class: "btn-small btn-delete" %>
+
+    <% end %> 
       
         <% if user_signed_in? %>
           <% if current_user.already_liked?(t) %>
@@ -57,9 +69,8 @@
           <i class="far fa-heart"></i><%= t.likes.count %>
         <% end %>
         <%= t.created_at %>
-        <%= link_to "詳細へ", krk_path(t.id) %>
-        <%= link_to "編集する", edit_krk_path(t.id) %>
-        <%= button_to "削除する", krk_path(t.id), method: :delete %> 
+        <%= link_to "詳細へ", krk_path(t.id), class: "btn btn-detail" %>
+        
       </div>
     <% end %>
   </div>
