--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,26 +5,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <script src="https://kit.fontawesome.com/45c3850352.js"  crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/45c3850352.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%#= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <header>
-      <h1>Melody Map</h1>
-      <div class="header-list">
-        <ul>
-          <% if user_signed_in? %>
-            <li><%= button_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
-          <% else %>
-            <li><%= link_to "新規登録", new_user_registration_path %></li>
-            <li><%= link_to "ログイン", new_user_session_path %></li>
-          <% end %>
-        </ul>
-      </div>
-    </header>
+    <% if controller_name == "krks" && action_name == "index" %>
+      <%= render 'layouts/special_header' %>
+    <% else %>
+      <%= render 'layouts/header' %>
+    <% end %>
     <main>
-      <%= yield %>
+      
     </main>
   </body>
 </html>
