--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,36 @@
-<h1>users#show</h1>
-<%= image_tag @user.image_url, size: "250x200" if @user.image? %>
-<p>名前 : <%= @user.name %></p>
-<p>メールアドレス : <%= @user.email %></p>
-<p>プロフィール : <%= @user.profile %></p>
+<div class="user-profile">
+    <h1>マイページ</h1>
+    <%= image_tag @user.image_url, size: "250x200", class: "img-responsive" if @user.image? %>
+    <p>名前 : <%= @user.name %></p>
+    <p>メールアドレス : <%= @user.email %></p>
+    <p>プロフィール : <%= @user.profile %></p>
 
-<% if current_user.id == @user.id %>
-  <%= link_to "編集する", edit_user_registration_path %>
+    <% if current_user.id == @user.id %>
+  <%= link_to "編集する", edit_user_registration_path, class: 'edit-btn' %>
 <% end %>
 
-<h2>ユーザーの投稿一覧</h2>
-<% @user.krks.each do |t| %>
-  <%= t.user.name %>
-  <%= t.name %>
-  <%= t.about %>
-<% end %>
 
-<!-- 以下はいいね機能を実装している場合-->
-<h2>ユーザーがいいねした投稿一覧</h2>
-<% @user.liked_krks.each do |t| %>
-  <%= t.user.name %>
-  <%= t.name %>
-  <%= t.about %>
-<% end %>
-<!-- ここまで-->
+    <div class="user-posts">
+        <h2>ユーザーの投稿一覧</h2>
+        <% @user.krks.each do |t| %>
+            <div class="post">
+                <h3><%= t.user.name %></h3>
+                <p><%= t.name %></p>
+                <p><%= t.about %></p>
+            </div>
+        <% end %>
+    </div>
 
-<%= link_to "Tweet一覧に戻る", krks_path %>
+    <div class="user-liked-posts">
+        <h2>ユーザーがいいねした投稿一覧</h2>
+        <% @user.liked_krks.each do |t| %>
+            <div class="liked-post">
+                <h3><%= t.user.name %></h3>
+                <p><%= t.name %></p>
+                <p><%= t.about %></p>
+            </div>
+        <% end %>
+    </div>
+</div>
+
+<%= link_to "homeに戻る", krks_path %>
