--- a/app/assets/stylesheets/kensaks.scss
+++ b/app/assets/stylesheets/kensaks.scss
@@ -21,7 +21,8 @@
     padding-top: 0; 
   margin-top: 0; 
   }
-  @import "https://use.fontawesome.com/releases/v5.13.0/css/all.css";
+
+  @import url(https://use.fontawesome.com/releases/v5.13.0/css/all.css);
 
 *,
 *:before,
